# automated-machine-learning-for-trend-prediction

./: .gitignore  LICENSE  README.md  algorithm_comparison.py  exp.py  exp1.py  helpers.py  main.py  nasdaq.py  nyse.py  pyproject.toml  requirements.txt  script.sh  script1.sh  slurm-1108541.out  slurm-1108543.out  slurm-1108544.out  speed-test.py  stx.py  test.py
.github/workflows/: ci.yml
Experiment Results (Mon Sep 20 08:57:58 2021)/de NASDAQ/: Params.csv  Predictions.csv  Results.csv  Rows.csv  SDA.csv  Summary.csv
Experiment Results (Mon Sep 20 08:57:58 2021)/de NYSE/: Params.csv  Predictions.csv  Results.csv  Rows.csv  SDA.csv  Summary.csv
Experiment Results (Mon Sep 20 08:57:58 2021)/de STX40/: Params.csv  Predictions.csv  Results.csv  Rows.csv  SDA.csv  Summary.csv
Experiment Results (Mon Sep 20 08:57:58 2021)/ps NASDAQ/: Params.csv  Predictions.csv  Results.csv  Rows.csv  SDA.csv  Summary.csv
Experiment Results (Mon Sep 20 08:57:58 2021)/ps NYSE/: Params.csv  Predictions.csv  Results.csv  Rows.csv  SDA.csv  Summary.csv
Experiment Results (Mon Sep 20 08:57:58 2021)/ps STX40/: Params.csv  Predictions.csv  Results.csv  Rows.csv  SDA.csv  Summary.csv
Experiment Results (Sun Sep 19 17:06:56 2021)/: DE Results STX40.csv
Experiment Results (Tue Sep 14 19:57:25 2021)/: DE Results NASDAQ.csv
Experiment Results (Tue Sep 14 19:58:16 2021)/: DE Results NYSE.csv
Experiment Results (Tue Sep 14 20:05:58 2021)/: DE Results STX40.csv
app/: FileStorage.py  TrendLine.py
data/: BARC.csv
storage/: dean
tests/: test_core.py
(+6429 files in other folders)
